Time: 2 ms (99.78%), Space: 43.5 MB (23.27%) - LeetHub